[project]
name = "dax"
version = "0.0.a0"
description = "Dynamical system filtering, smoothing, and identification in Jax."
readme = "README.md"
requires-python =">=3.9"
license = {file = "LICENSE"}
authors = [
  {name = "Ilias Bilionis", email = "ibilion@purdue.edu"},
]
keywords = ["particle-filters", "particle-smoothing", "expectation-maximization", "particle-MCMC"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]